--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -10,12 +10,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication"
-        android:usesCleartextTraffic="true">
+        android:usesCleartextTraffic="true" >
+        <activity
+            android:name=".JobTestScreen"
+            android:exported="false" />
+        <activity
+            android:name=".SelectorActivity"
+            android:exported="false" />
         <activity
             android:name=".ResultActivity"
             android:exported="false"
-            android:theme="@style/Theme.MyApplication.NoActionBar"
-            />
+            android:theme="@style/Theme.MyApplication.NoActionBar" />
         <activity
             android:name=".QuizScreen"
             android:exported="false"
@@ -23,7 +28,7 @@
         <activity
             android:name=".SignUp"
             android:exported="false"
-            android:parentActivityName=".MainActivity"
+            android:parentActivityName=".LoginActivity"
             android:theme="@style/Theme.MyApplication" />
         <activity
             android:name=".HomeScreen.HomeActivity"
@@ -31,8 +36,8 @@
             android:label="@string/title_activity_home"
             android:theme="@style/Theme.MyApplication.NoActionBar" />
         <activity
-            android:name=".MainActivity"
-            android:exported="true">
+            android:name=".LoginActivity"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
